// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots TextLink Link with icon 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="story"
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      className="story-header"
      style={
        Object {
          "color": "#565d6b",
          "fontSize": 14,
          "lineHeight": 1.5,
        }
      }
    >
      <div>
        <h1
          className="story-title"
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Link with icon
        </h1>
        
        <span
          className="story-subtitle"
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <div
              style={
                Object {
                  "WebkitFontSmoothing": "antialiased",
                  "color": "#444",
                  "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                  "fontSize": "15px",
                }
              }
            >
              Text links are used in paragraphs when part of the text needs to be actionable. It inherits the visual style of the parent paragraph. Visit Orbit.Kiwi for more detailed guidelines.
            </div>
          </div>
        </span>
      </div>
    </div>
    <div
      className="story-chapters"
    >
      <div
        className="chapter"
      >
        <div
          className="chapter-header"
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            
            
            
            
          </div>
        </div>
        <div
          className="chapter-sections"
        >
          <div
            className="section-container"
            style={
              Object {
                "marginBottom": 100,
              }
            }
          >
            <div
              className="section-header"
              style={Object {}}
            >
              <div>
                
                
              </div>
            </div>
            <div
              className="section-component-container"
              style={
                Object {
                  "marginBottom": 60,
                }
              }
            >
              <a
                className="TextLink__StyledTextLink-sc-1bvlje4-1 gjnkGq"
                href="https://kiwi.com"
                onClick={[Function]}
                rel=""
              >
                TextLink with icon
                <span
                  className="TextLink__IconContainer-sc-1bvlje4-0 hvVwEI"
                >
                  <svg
                    className="Icon__StyledIcon-sc-1pnzn3g-0 geWqaO"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                    />
                  </svg>
                </span>
              </a>
            </div>
            <div
              className="section-additional"
              style={Object {}}
            >
              <div>
                
                <div
                  className="section-subsection"
                  style={
                    Object {
                      "marginBottom": 60,
                    }
                  }
                >
                  <h4
                    className="section-subsection-title"
                  >
                    Source
                  </h4>
                  <pre
                    className="section-pre"
                    style={
                      Object {
                        "backgroundColor": "rgb(250, 250, 250)",
                        "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                        "fontSize": ".88em",
                        "lineHeight": "1.5",
                        "overflowX": "scroll",
                        "padding": "0.5rem",
                      }
                    }
                  >
                    <div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &lt;
                          TextLink
                        </span>
                        <span>
                          <span>
                             
                            <span
                              style={Object {}}
                            >
                              onClick
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#170",
                                    }
                                  }
                                >
                                  clicked
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                          <span>
                             
                            <span
                              style={Object {}}
                            >
                              href
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  https://kiwi.com
                                </span>
                                "
                              </span>
                            </span>
                          </span>
                          <span>
                             
                            <span
                              style={Object {}}
                            >
                              icon
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  &lt;ChevronRight /&gt;
                                </span>
                                }
                              </span>
                            </span>
                            
                          </span>
                        </span>
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &gt;
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          TextLink with icon
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &lt;/
                          TextLink
                          &gt;
                        </span>
                      </div>
                    </div>
                  </pre>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TextLink Playground 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="story"
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      className="story-header"
      style={
        Object {
          "color": "#565d6b",
          "fontSize": 14,
          "lineHeight": 1.5,
        }
      }
    >
      <div>
        <h1
          className="story-title"
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Playground
        </h1>
        
        <span
          className="story-subtitle"
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <div
              style={
                Object {
                  "WebkitFontSmoothing": "antialiased",
                  "color": "#444",
                  "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                  "fontSize": "15px",
                }
              }
            >
              You can try all possible configurations of this component. However, check Orbit.Kiwi for more detailed design guidelines.
            </div>
          </div>
        </span>
      </div>
    </div>
    <div
      className="story-chapters"
    >
      <div
        className="chapter"
      >
        <div
          className="chapter-header"
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            
            
            
            
          </div>
        </div>
        <div
          className="chapter-sections"
        >
          <div
            className="section-container"
            style={
              Object {
                "marginBottom": 100,
              }
            }
          >
            <div
              className="section-header"
              style={Object {}}
            >
              <div>
                
                
              </div>
            </div>
            <div
              className="section-component-container"
              style={
                Object {
                  "marginBottom": 60,
                }
              }
            >
              <a
                className="TextLink__StyledTextLink-sc-1bvlje4-1 hiklAr"
                data-test="test"
                href="https://kiwi.com"
                onClick={[Function]}
                rel="noopener noreferrer"
                size="small"
                target="_blank"
              >
                Custom link
                <span
                  className="TextLink__IconContainer-sc-1bvlje4-0 dwbANF"
                >
                  <svg
                    className="Icon__StyledIcon-sc-1pnzn3g-0 geWqaO"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"
                    />
                  </svg>
                </span>
              </a>
            </div>
            <div
              className="section-additional"
              style={Object {}}
            >
              <div>
                
                <div
                  className="section-subsection"
                  style={
                    Object {
                      "marginBottom": 60,
                    }
                  }
                >
                  <h4
                    className="section-subsection-title"
                  >
                    Source
                  </h4>
                  <pre
                    className="section-pre"
                    style={
                      Object {
                        "backgroundColor": "rgb(250, 250, 250)",
                        "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                        "fontSize": ".88em",
                        "lineHeight": "1.5",
                        "overflowX": "scroll",
                        "padding": "0.5rem",
                      }
                    }
                  >
                    <div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &lt;
                          TextLink
                        </span>
                        <span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              external
                            </span>
                          </span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              onClick
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#170",
                                    }
                                  }
                                >
                                  clicked
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              href
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  https://kiwi.com
                                </span>
                                "
                              </span>
                            </span>
                          </span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              type
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  secondary
                                </span>
                                "
                              </span>
                            </span>
                          </span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              size
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  small
                                </span>
                                "
                              </span>
                            </span>
                          </span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              rel
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#444",
                                    }
                                  }
                                >
                                  null
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              icon
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  &lt;ChevronRight /&gt;
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              dataTest
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  test
                                </span>
                                "
                              </span>
                            </span>
                            <br />
                          </span>
                        </span>
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &gt;
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          Custom link
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &lt;/
                          TextLink
                          &gt;
                        </span>
                      </div>
                    </div>
                  </pre>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TextLink Primary link 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="story"
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      className="story-header"
      style={
        Object {
          "color": "#565d6b",
          "fontSize": 14,
          "lineHeight": 1.5,
        }
      }
    >
      <div>
        <h1
          className="story-title"
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Primary link
        </h1>
        
        <span
          className="story-subtitle"
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <div
              style={
                Object {
                  "WebkitFontSmoothing": "antialiased",
                  "color": "#444",
                  "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                  "fontSize": "15px",
                }
              }
            >
              Text links are used in paragraphs when part of the text needs to be actionable. It inherits the visual style of the parent paragraph. Visit Orbit.Kiwi for more detailed guidelines.
            </div>
          </div>
        </span>
      </div>
    </div>
    <div
      className="story-chapters"
    >
      <div
        className="chapter"
      >
        <div
          className="chapter-header"
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            
            
            
            
          </div>
        </div>
        <div
          className="chapter-sections"
        >
          <div
            className="section-container"
            style={
              Object {
                "marginBottom": 100,
              }
            }
          >
            <div
              className="section-header"
              style={Object {}}
            >
              <div>
                
                
              </div>
            </div>
            <div
              className="section-component-container"
              style={
                Object {
                  "marginBottom": 60,
                }
              }
            >
              <a
                className="TextLink__StyledTextLink-sc-1bvlje4-1 gjnkGq"
                href="https://kiwi.com"
                onClick={[Function]}
                rel=""
              >
                Primary link
              </a>
            </div>
            <div
              className="section-additional"
              style={Object {}}
            >
              <div>
                
                <div
                  className="section-subsection"
                  style={
                    Object {
                      "marginBottom": 60,
                    }
                  }
                >
                  <h4
                    className="section-subsection-title"
                  >
                    Source
                  </h4>
                  <pre
                    className="section-pre"
                    style={
                      Object {
                        "backgroundColor": "rgb(250, 250, 250)",
                        "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                        "fontSize": ".88em",
                        "lineHeight": "1.5",
                        "overflowX": "scroll",
                        "padding": "0.5rem",
                      }
                    }
                  >
                    <div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &lt;
                          TextLink
                        </span>
                        <span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              external
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#a11",
                                    }
                                  }
                                >
                                  false
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              onClick
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#170",
                                    }
                                  }
                                >
                                  clicked
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              href
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  https://kiwi.com
                                </span>
                                "
                              </span>
                            </span>
                          </span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              type
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  primary
                                </span>
                                "
                              </span>
                            </span>
                            <br />
                          </span>
                        </span>
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &gt;
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          Primary link
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &lt;/
                          TextLink
                          &gt;
                        </span>
                      </div>
                    </div>
                  </pre>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TextLink RTL 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="story"
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      className="story-header"
      style={
        Object {
          "color": "#565d6b",
          "fontSize": 14,
          "lineHeight": 1.5,
        }
      }
    >
      <div>
        <h1
          className="story-title"
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          RTL
        </h1>
        
        <span
          className="story-subtitle"
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <div
              style={
                Object {
                  "WebkitFontSmoothing": "antialiased",
                  "color": "#444",
                  "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                  "fontSize": "15px",
                }
              }
            >
              This is a preview of this component in RTL setup.
            </div>
          </div>
        </span>
      </div>
    </div>
    <div
      className="story-chapters"
    >
      <div
        className="chapter"
      >
        <div
          className="chapter-header"
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            
            
            
            
          </div>
        </div>
        <div
          className="chapter-sections"
        >
          <div
            className="section-container"
            style={
              Object {
                "marginBottom": 100,
              }
            }
          >
            <div
              className="section-header"
              style={Object {}}
            >
              <div>
                
                
              </div>
            </div>
            <div
              className="section-component-container"
              style={
                Object {
                  "marginBottom": 60,
                }
              }
            >
              <a
                className="TextLink__StyledTextLink-sc-1bvlje4-1 gjnkGq"
                href="#"
                onClick={[Function]}
                rel=""
              >
                Link
                <span
                  className="TextLink__IconContainer-sc-1bvlje4-0 hvVwEI"
                >
                  <svg
                    className="Icon__StyledIcon-sc-1pnzn3g-0 geWqaO"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M15.41 7.41L14 6l-6 6 6 6 1.41-1.41L10.83 12z"
                    />
                  </svg>
                </span>
              </a>
            </div>
            <div
              className="section-additional"
              style={Object {}}
            >
              <div>
                
                <div
                  className="section-subsection"
                  style={
                    Object {
                      "marginBottom": 60,
                    }
                  }
                >
                  <h4
                    className="section-subsection-title"
                  >
                    Source
                  </h4>
                  <pre
                    className="section-pre"
                    style={
                      Object {
                        "backgroundColor": "rgb(250, 250, 250)",
                        "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                        "fontSize": ".88em",
                        "lineHeight": "1.5",
                        "overflowX": "scroll",
                        "padding": "0.5rem",
                      }
                    }
                  >
                    <div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &lt;
                          RenderInRtl
                        </span>
                        <span />
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &gt;
                        </span>
                      </div>
                      <div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 33,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#444",
                              }
                            }
                          >
                            &lt;
                            TextLink
                          </span>
                          <span>
                            <span>
                               
                              <span
                                style={Object {}}
                              >
                                onClick
                              </span>
                              <span>
                                =
                                <span
                                  style={Object {}}
                                >
                                  {
                                  <span
                                    style={
                                      Object {
                                        "color": "#170",
                                      }
                                    }
                                  >
                                    clicked
                                  </span>
                                  }
                                </span>
                              </span>
                            </span>
                            <span>
                               
                              <span
                                style={Object {}}
                              >
                                href
                              </span>
                              <span>
                                =
                                <span
                                  style={Object {}}
                                >
                                  "
                                  <span
                                    style={
                                      Object {
                                        "color": "#22a",
                                        "wordBreak": "break-word",
                                      }
                                    }
                                  >
                                    #
                                  </span>
                                  "
                                </span>
                              </span>
                            </span>
                            <span>
                               
                              <span
                                style={Object {}}
                              >
                                icon
                              </span>
                              <span>
                                =
                                <span
                                  style={Object {}}
                                >
                                  {
                                  <span
                                    style={
                                      Object {
                                        "color": "#666",
                                      }
                                    }
                                  >
                                    &lt;ChevronLeft /&gt;
                                  </span>
                                  }
                                </span>
                              </span>
                              
                            </span>
                          </span>
                          <span
                            style={
                              Object {
                                "color": "#444",
                              }
                            }
                          >
                            &gt;
                          </span>
                        </div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 48,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#444",
                              }
                            }
                          >
                            Link
                          </span>
                        </div>
                        <div
                          style={
                            Object {
                              "paddingLeft": 33,
                              "paddingRight": 3,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "color": "#444",
                              }
                            }
                          >
                            &lt;/
                            TextLink
                            &gt;
                          </span>
                        </div>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &lt;/
                          RenderInRtl
                          &gt;
                        </span>
                      </div>
                    </div>
                  </pre>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots TextLink Secondary link 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="story"
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      className="story-header"
      style={
        Object {
          "color": "#565d6b",
          "fontSize": 14,
          "lineHeight": 1.5,
        }
      }
    >
      <div>
        <h1
          className="story-title"
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Secondary link
        </h1>
        
        <span
          className="story-subtitle"
          style={
            Object {
              "color": "#898d97",
              "fontSize": 18,
              "marginBottom": 20,
              "marginTop": 0,
            }
          }
        >
          <div>
            <div
              style={
                Object {
                  "WebkitFontSmoothing": "antialiased",
                  "color": "#444",
                  "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                  "fontSize": "15px",
                }
              }
            >
              Text links are used in paragraphs when part of the text needs to be actionable. It inherits the visual style of the parent paragraph. Visit Orbit.Kiwi for more detailed guidelines.
            </div>
          </div>
        </span>
      </div>
    </div>
    <div
      className="story-chapters"
    >
      <div
        className="chapter"
      >
        <div
          className="chapter-header"
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <div>
            
            
            
            
          </div>
        </div>
        <div
          className="chapter-sections"
        >
          <div
            className="section-container"
            style={
              Object {
                "marginBottom": 100,
              }
            }
          >
            <div
              className="section-header"
              style={Object {}}
            >
              <div>
                
                
              </div>
            </div>
            <div
              className="section-component-container"
              style={
                Object {
                  "marginBottom": 60,
                }
              }
            >
              <a
                className="TextLink__StyledTextLink-sc-1bvlje4-1 fdRcJC"
                href="https://kiwi.com"
                onClick={[Function]}
                rel=""
              >
                Secondary link
              </a>
            </div>
            <div
              className="section-additional"
              style={Object {}}
            >
              <div>
                
                <div
                  className="section-subsection"
                  style={
                    Object {
                      "marginBottom": 60,
                    }
                  }
                >
                  <h4
                    className="section-subsection-title"
                  >
                    Source
                  </h4>
                  <pre
                    className="section-pre"
                    style={
                      Object {
                        "backgroundColor": "rgb(250, 250, 250)",
                        "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                        "fontSize": ".88em",
                        "lineHeight": "1.5",
                        "overflowX": "scroll",
                        "padding": "0.5rem",
                      }
                    }
                  >
                    <div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &lt;
                          TextLink
                        </span>
                        <span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              external
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#a11",
                                    }
                                  }
                                >
                                  false
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              onClick
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#170",
                                    }
                                  }
                                >
                                  clicked
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              href
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  https://kiwi.com
                                </span>
                                "
                              </span>
                            </span>
                          </span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              type
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  secondary
                                </span>
                                "
                              </span>
                            </span>
                            <br />
                          </span>
                        </span>
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &gt;
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          Secondary link
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#444",
                            }
                          }
                        >
                          &lt;/
                          TextLink
                          &gt;
                        </span>
                      </div>
                    </div>
                  </pre>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
